--- a/server/config/.env
+++ b/server/config/.env
@@ -1,3 +1,3 @@
-MONGODB_URI="mongodb+srv://fittrack:mounamouna@cluster0.e2judyh.mongodb.net/"
+MONGODB_URI = mongodb://localhost:27017/fitness-tracker
 
-port=3000
+PORT = 5000
